# lab1

./: CMakeLists.txt  DynamicArray.c  DynamicArray.h  UI.c  UI.h  int_functions.c  int_functions.h  main.c  str_functions.c  str_functions.h  tests.c  tests.h
